# mazeRunner-app-flask

./: README.md  completed.txt  main.py  maze.py  pyproject.toml  quick_solver.py  requirements.txt  runner.py
static/: styles.css
templates/: index.html
